# aosp-AdbTest

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
adbutils/: build.gradle.kts
adbutils/src/androidTest/java/dev/rohitverma882/adbutils/: ExampleInstrumentedTest.kt
adbutils/src/main/cpp/: CMakeLists.txt  adb_utils.cpp  auth.cpp  utils.h
adbutils/src/main/java/dev/rohitverma882/adbutils/: AdbUtils.kt
adbutils/src/test/java/dev/rohitverma882/adbutils/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/dev/rohitverma882/adbtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adb.cpp  adb.h  adb_jni.cpp  adb_utils.cpp  auth.cpp  auth.h  crypto_utils.cpp  crypto_utils.h  logging.h  utils.cpp  utils.h
app/src/main/java/dev/rohitverma882/adbtest/: ApplicationLoader.kt  MainActivity.kt  MyApp.kt
app/src/main/java/dev/rohitverma882/adbtest/adb/: Adb.kt  AdbCrypto.java  AdbDevice.java  AdbMessage.java  AdbSocket.java  AdbUtils.kt  UsbReceiver.kt
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/dev/rohitverma882/adbtest/: ExampleUnitTest.kt
gradle/: libs.versions.toml
